@@ -269,10 +269,10 @@ rule building ( properties * )
 	{
 		# hide non-external symbols
 		# use ms-compat because boost.asio (as of 1.47.0
-		# appears to have some types not fulle exported)
+		# appears to have some types not fully exported)
 		result += <cflags>-fvisibility=hidden ;
 		result += <cxxflags>-fvisibility-inlines-hidden ;
-		result += <linkflags>-W1,-Bsymbolic ;
+		result += <linkflags>-Wl,-Bsymbolic ;
 	}
 
 	return $(result) ;
