@@ -45,6 +45,13 @@ namespace
         return;
     }
 #ifndef TORRENT_DISABLE_DHT
+    void add_dht_node(session& s, tuple n)
+    {
+        std::string ip = extract<std::string>(n[0]);
+        int port = extract<int>(n[1]);
+        s.add_dht_node(std::make_pair(ip, port));
+    }
+
     void add_dht_router(session& s, std::string router_, int port_)
     {
         allow_threading_guard guard;
@@ -154,7 +161,7 @@ namespace
 }
 
     void dict_to_add_torrent_params(dict params, add_torrent_params& p
-        , std::vector<char>& rd)
+        , std::vector<char>& rd, std::vector<boost::uint8_t>& fp)
     {
         // torrent_info objects are always held by an intrusive_ptr in the python binding
         if (params.has_key("ti") && params.get("ti") != boost::python::object())
@@ -225,6 +232,16 @@ namespace
             p.source_feed_url = extract<std::string>(params["source_feed_url"]);
         if (params.has_key("uuid"))
             p.uuid = extract<std::string>(params["uuid"]);
+
+        fp.clear();
+        if (params.has_key("file_priorities"))
+        {
+            list l = extract<list>(params["file_priorities"]);
+            int n = boost::python::len(l);
+            for(int i = 0; i < n; i++)
+                fp.push_back(extract<boost::uint8_t>(l[i]));
+            p.file_priorities = &fp;
+        }
     }
 
 namespace
@@ -234,7 +251,8 @@ namespace
     {
         add_torrent_params p;
         std::vector<char> resume_buf;
-        dict_to_add_torrent_params(params, p, resume_buf);
+        std::vector<boost::uint8_t> files_buf;
+        dict_to_add_torrent_params(params, p, resume_buf, files_buf);
 
         allow_threading_guard guard;
 
@@ -250,7 +268,8 @@ namespace
     {
         add_torrent_params p;
         std::vector<char> resume_buf;
-        dict_to_add_torrent_params(params, p, resume_buf);
+        std::vector<boost::uint8_t> files_buf;
+        dict_to_add_torrent_params(params, p, resume_buf, files_buf);
 
         allow_threading_guard guard;
 
@@ -263,7 +282,8 @@ namespace
     }
 
     void dict_to_feed_settings(dict params, feed_settings& feed
-        , std::vector<char>& resume_buf)
+        , std::vector<char>& resume_buf
+        , std::vector<boost::uint8_t> files_buf)
     {
         if (params.has_key("auto_download"))
             feed.auto_download = extract<bool>(params["auto_download"]);
@@ -273,7 +293,7 @@ namespace
             feed.url = extract<std::string>(params["url"]);
         if (params.has_key("add_args"))
             dict_to_add_torrent_params(dict(params["add_args"]), feed.add_args
-                , resume_buf);
+                , resume_buf, files_buf);
     }
 
     feed_handle add_feed(session& s, dict params)
@@ -282,7 +302,8 @@ namespace
         // this static here is a bit of a hack. It will
         // probably work for the most part
         static std::vector<char> resume_buf;
-        dict_to_feed_settings(params, feed, resume_buf);
+        static std::vector<boost::uint8_t> files_buf;
+        dict_to_feed_settings(params, feed, resume_buf, files_buf);
 
         allow_threading_guard guard;
         return s.add_feed(feed);
@@ -329,7 +350,8 @@ namespace
     {
         feed_settings feed;
         static std::vector<char> resume_buf;
-        dict_to_feed_settings(sett, feed, resume_buf);
+        static std::vector<boost::uint8_t> files_buf;
+        dict_to_feed_settings(sett, feed, resume_buf, files_buf);
         h.set_settings(feed);
     }
 
@@ -396,6 +418,17 @@ namespace
 		return ret;
 	 }
 #endif
+
+    dict get_utp_stats(session_status const& st)
+    {
+        dict ret;
+        ret["num_idle"] = st.utp_stats.num_idle;
+        ret["num_syn_sent"] = st.utp_stats.num_syn_sent;
+        ret["num_connected"] = st.utp_stats.num_connected;
+        ret["num_fin_sent"] = st.utp_stats.num_fin_sent;
+        ret["num_close_wait"] = st.utp_stats.num_close_wait;
+        return ret;
+    }
 
 #ifndef TORRENT_DISABLE_GEO_IP
     void load_asnum_db(session& s, std::string file)
@@ -504,7 +537,9 @@ void bind_session()
         .def_readonly("dht_torrents", &session_status::dht_torrents)
         .def_readonly("dht_global_nodes", &session_status::dht_global_nodes)
         .def_readonly("active_requests", &session_status::active_requests)
+        .def_readonly("dht_total_allocations", &session_status::dht_total_allocations)
 #endif
+        .add_property("utp_stats", &get_utp_stats)
         ;
 
 #ifndef TORRENT_DISABLE_DHT
@@ -600,10 +635,12 @@ void bind_session()
         .def("listen_port", allow_threads(&session::listen_port))
         .def("status", allow_threads(&session::status))
 #ifndef TORRENT_DISABLE_DHT
+        .def("add_dht_node", add_dht_node)
         .def(
             "add_dht_router", &add_dht_router
           , (arg("router"), "port")
         )
+        .def("is_dht_running", allow_threads(&session::is_dht_running))
         .def("set_dht_settings", allow_threads(&session::set_dht_settings))
         .def("start_dht", allow_threads(start_dht0))
         .def("stop_dht", allow_threads(&session::stop_dht))
@@ -684,6 +721,10 @@ void bind_session()
         .def("peer_proxy", allow_threads(&session::peer_proxy))
         .def("tracker_proxy", allow_threads(&session::tracker_proxy))
         .def("web_seed_proxy", allow_threads(&session::web_seed_proxy))
+#endif
+#if TORRENT_USE_I2P
+        .def("set_i2p_proxy", allow_threads(&session::set_i2p_proxy))
+        .def("i2p_proxy", allow_threads(&session::i2p_proxy))
 #endif
         .def("set_proxy", allow_threads(&session::set_proxy))
         .def("proxy", allow_threads(&session::proxy))
