@@ -54,6 +54,7 @@ void bind_session_settings()
         .def_readwrite("upnp_ignore_nonrouters", &session_settings::upnp_ignore_nonrouters)
         .def_readwrite("send_buffer_low_watermark", &session_settings::send_buffer_low_watermark)
         .def_readwrite("send_buffer_watermark", &session_settings::send_buffer_watermark)
+        .def_readwrite("send_buffer_watermark_factor", &session_settings::send_buffer_watermark_factor)
         .def_readwrite("choking_algorithm", &session_settings::choking_algorithm)
         .def_readwrite("seed_choking_algorithm", &session_settings::seed_choking_algorithm)
         .def_readwrite("use_parole_mode", &session_settings::use_parole_mode)
@@ -62,6 +63,7 @@ void bind_session_settings()
         .def_readwrite("cache_expiry", &session_settings::cache_expiry)
         .def_readwrite("use_read_cache", &session_settings::use_read_cache)
         .def_readwrite("explicit_read_cache", &session_settings::explicit_read_cache)
+        .def_readwrite("explicit_cache_interval", &session_settings::explicit_cache_interval)
         .def_readwrite("disk_io_write_mode", &session_settings::disk_io_write_mode)
         .def_readwrite("disk_io_read_mode", &session_settings::disk_io_read_mode)
         .def_readwrite("coalesce_reads", &session_settings::coalesce_reads)
@@ -147,12 +149,14 @@ void bind_session_settings()
         .def_readwrite("connections_limit", &session_settings::connections_limit)
         .def_readwrite("utp_target_delay", &session_settings::utp_target_delay)
         .def_readwrite("utp_gain_factor", &session_settings::utp_gain_factor)
+        .def_readwrite("utp_min_timeout", &session_settings::utp_min_timeout)
         .def_readwrite("utp_syn_resends", &session_settings::utp_syn_resends)
         .def_readwrite("utp_fin_resends", &session_settings::utp_fin_resends)
         .def_readwrite("utp_num_resends", &session_settings::utp_num_resends)
         .def_readwrite("utp_connect_timeout", &session_settings::utp_connect_timeout)
         .def_readwrite("utp_delayed_ack", &session_settings::utp_delayed_ack)
         .def_readwrite("utp_dynamic_sock_buf", &session_settings::utp_dynamic_sock_buf)
+        .def_readwrite("utp_loss_multiplier", &session_settings::utp_loss_multiplier)
         .def_readwrite("mixed_mode_algorithm", &session_settings::mixed_mode_algorithm)
         .def_readwrite("listen_queue_size", &session_settings::listen_queue_size)
         .def_readwrite("announce_double_nat", &session_settings::announce_double_nat)
