@@ -40,6 +40,8 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* add a number of missing functions to the python binding
+	* fix typo in Jamfile for building shared libraries
 	* prevent tracker exchange for magnet links before metadata is received
 	* fix crash in make_magnet_uri when generating links longer than 1024 characters
 	* fix hanging issue when closing files on windows (completing a download)
